# SpaceWatcher

./: README.md  main.py  pyproject.toml
schemas/: __init__.py  file_schemas.py
services/: __init__.py  file_services.py  help_services.py
ui/: main_window.py
